# SComplex

./: .gitignore  3LinkDynamics.ipynb  EnvironmentalForces.py  README.md  RipsComp_Collision.pkl  SComplex.ipynb  SComplex_mehli.ipynb  SimplicialComplex3Core.ipynb  SimplicialComplexTemplate.ipynb  ThreeBodyDynamics.ipynb  pendulum_control_loop_validation.ipynb  plotstyle_presentation.mplstyle  pyproject.toml  results_df(2).csv  run_three_body_simulation.py  validation_examples.ipynb
data/: LOSGuidanceProportional1_20250717_070508_886924.csv  OceanCurrent1_20250717_070508_887485.csv  VesselModel3DOFWindCurrent1_20250717_070508_887773.csv  WaypointManager1_20250717_070508_887593.csv  WindModel3DOF1_20250717_070508_887359.csv  three_body_stable_dhsic_joined.csv
data/DpShipData/: DPController_20250718_123324_890377.csv  Observer_20250718_123324_890910.csv  ReferenceGenerator_20250718_123324_891651.csv  Ship_20250718_123324_891097.csv  ThrustAllocation_20250718_123324_891788.csv
data/data_pendulum/: simulation_histories.csv  simulation_histories_core.csv
data/data_three_body/: DHSIC_JointTrajectories.csv  DHSIC_indivCoordinateTrajectories.csv  three_body_histories.csv  three_body_unstable_dhsic_joined.csv
data/mehli_dp/: LOSGuidanceProportional1_20250819_185911_666879.csv  LOSGuidanceProportional1_20250819_185911_666879_metadata.yaml  LogConfig.xml  OspSystemStructure.xml  (+8 more)
data_processor/: data_processor.py
metrics/: metrics.py
pickled_dfs/: RipsComp.pkl
src/: complex_processing.py  report_summary_sc.py
tbd/: # main.py  config.py  debugger.py  main.py
(+3 files in other folders)
